--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ jupyter==1.0.0
 numpy==1.24.2
 pandas==1.5.3
 PyAudio==0.2.13
+pyttsx3==2.90
 requests==2.28.2
 sounddevice==0.4.6
 SpeechRecognition==3.10.0
